Add route to fetch tokens prices
